# TCO_PROCESS

./: CMakeLists.txt  README.md  notes.txt
headers/: control.h  gui.h  lightgrid.h  lightsignal.h  serialhandler.h
sources/: control.cpp  gui.cpp  lightgrid.cpp  lightsignal.cpp  main.cpp  serialhandler.cpp
ui/: control.ui  gui.ui
